--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,4 @@
-<app-header></app-header>
-<div class="container">
+<div class="header">
   <div class="row">
     <div class="col-md-12">
       <h2>Angular App</h2>
