--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list
-    (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
     <app-recipe-detail
@@ -11,4 +10,5 @@
     <ng-template #infoText>
       <h3>Please select a Recipe!</h3>
     </ng-template>
+  </div>
 </div>
